<resources>
    <string name="app_name">Palliate</string>
    <string name="developers">Developers</string>
    <string name="dev1">Dorision Ngoepe</string>
    <string name="dev2">Sibusiso Jiyane</string>
    <string name="dev3">Dikeledi Makofane</string>
    <string name="dev4">Dineo Mafa</string>
    <string name="dev5">Aphiwe Maqutu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_life">Life</string>
    <string name="title_activity_support">Support</string>


    <string name="red_round_string">SMS Next of Kin</string>
    <string name="green_round_string">Connect with Social Worker</string>
    <string name="user_profile_string">My Profile</string>
    <string name="lifesupport_string">Tips and Guidelines</string>
    <string name="rehabilitation_string">Rehabilitation Center</string>
    <string name="help_string">Help</string>
    <string name="events_string">Events</string>
    <string name="support_chat_string">Support Chat</string>
    <string name="emotional_abuse_string">Emotional Abuse</string>
    <string name="physical_abuse_string">Physical Abuse</string>
    <string name="logout_string">LogOut</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="yellow_round_string">Call Counsellor</string>
    <string name="copyright">\u00A9 2017 Dope Coders</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="need_account">NEED AN ACCOUNT?</string>
    <string name="register">Register</string>
    <string name="title_activity_about">About</string>


    <string name="name">name</string>
    <string name="occupation">occupation</string>
    <string name="location">location</string>
    <string name="more">view more</string>
    <string name="topic_one">Child Abuse</string>
    <string name="topic_two">Depression</string>
    <string name="topic_three">Emotional Abuse</string>
    <string name="topic_four">Drug Abuse</string>
    <string name="topic_five">Physical Abuse</string>


    <string name="one_description">1. Volunteer your time. Get involved with other parents in your community. Help vulnerable children and their families. Start a playgroup. \n
2. Discipline your children thoughtfully. Never discipline your child when you are upset. Give yourself time to calm down. Remember that discipline is a way to teach your child. Use privileges
        to encourage good behavior and time-outs to help your child regain control.
\n 3. Examine your behavior. Abuse is not just physical. Both words and actions can inflict deep, lasting wounds. Be a nurturing parent.
        Use your actions to show children and other adults that conflicts can be settled without hitting or yelling.</string>

    <string name="three_description">1. Your partner may limit your freedom (not allow you to spend time with some people or insist on knowing your whereabouts), reject you (pretend you don’t exist, blame you for things that are not your fault) or belittle you by calling you names, insulting your family or career. \n
    2. Emotionally abusive behavior patterns that are controlling can spill over into finances. Emotional abuse can include a partner monitoring your finances, making you account for every penny, withholding money from you, or restricting your spending.
    \n3. Emotional abuse can also include monitoring your time, insisting on checking your phone and emails, and limiting your contact with family.</string>

    <string name="four_description">A few ways on how you see that you are an addict can be one or all of these. You should talk to someone close as soon as you notice them. \n1. Using addictive drugs (illicit or prescribed) for recreational purposes \n
2. Seeking out intoxication every time you use \n
        3. Abusing prescription medication</string>


    <string name="two_description">
Depression can negatively affect how you feel, the way you think and how you act.
Depression affects your mood, body and your thoughts.\n
You should seek professional help, if you persistently experience at least five of these symptoms for two weeks or longer: \n
\n -feelings of sad, helpless or hopeless \n
-loss of interest in activities that once brought you pleasure \n
-insomnia or excessive sleeping \n
-significant weight loss or weight gain \n
-feelings of worthlessness or inappropriate guilt \n
-not wanting to move or feeling lethargic \n
-difficulty concentrating or remembering things \n
-recurrent thoughts of death or suicide \n
-fatigue and loss of energy</string>

    <string name="five_description">Physical abuse is any intentional act causing injury or trauma to another person or animal by way of bodily contact. In most cases,
        children are the victims of physical abuse, but adults can also be victims, as in cases of domestic violence or workplace aggression. \n Domestic Violence and Sexual Abuse fall under Physical Abuse. \n
    There is no point of keeping silent after such incidents. As soon as they happen they call for an alarm. There are emergency contact details which deal with this immediately and post trauma too. Dont make excuses
    that it happened once there are high chances that it may happen again.</string>

    <string name="topic_textview">Topic</string>
    <string name="decription_textview">Description Here</string>

    <string name="about_app">A helping hand.
About the App
Our country (South Africa) is facing my challenges and one of the problems
is the high level of abuse for women and children. Young girls are getting
killed and raped every week, and sometimes it takes long to find the
missing person. \n\n

Palliate, meaning a helping hand, is an app which victims can connect with
social workers and someone who can quickly provide them with
counselling. The application helps after the victim has experienced the
abuse. You need to register first, then the user has to update the profile
because some information is not on the registration form. You can also add
your image to personalize your profile. You can update your profile on the
navigation bar, user can get Tips and guidelines, support chat for two
different types of abuse (physical and emotional abuse). Event is a function
for future, users will be able to view if there are any events regarding abuse
or any workshops related.\n\n
On the landing screen the user will encounter three buttons. 1. Call a Social
Worker 2. Call a Counselor 3. Sms(text) your next of kin, the one you
added when updating profile.
The user can logout from the app.</string>

    <string name="about_app_info">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_info">App Info</string>

</resources>
