<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/user_profile_string" />
        <item
            android:id="@+id/nav_tips_and_guidelines"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/lifesupport_string" />

        <item
            android:id="@+id/nav_rehab"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/rehabilitation_string" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help_24dp"
            android:title="@string/help_string" />


    </group>

    <item android:title="@string/support_chat_string">
        <menu>
            <item
                android:id="@+id/nav_emotional_abuse"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/emotional_abuse_string" />
            <item
                android:id="@+id/nav_physical_abuse"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/physical_abuse_string" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/logout_string" />


</menu>