<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.codetribe.palliate.AboutActivity">

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:onClick="FAQ"
        android:text="@string/about_app_info"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:onClick="Contact"
        android:text="@string/contact_us"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:onClick="App"
        android:text="@string/app_info"
        android:textColor="@android:color/black" />


</LinearLayout>
