<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#ccc"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="1dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="2dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:paddingBottom="16dp" />


            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:layout_toRightOf="@+id/image_view"
                android:gravity="top"
                android:paddingLeft="15dp"
                android:text="@string/name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/name"
                android:layout_toRightOf="@+id/image_view"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingLeft="15dp"
                android:text="@string/occupation"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/occupation"
                android:layout_toRightOf="@+id/image_view"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingLeft="15dp"
                android:text="@string/location"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/location"
                android:layout_toRightOf="@+id/image_view"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingLeft="15dp"
                android:text="@string/more"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/colorAccent" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>