<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.codetribe.palliate.Levels">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.17"
            android:orientation="vertical"
            tools:context="za.co.mamoletu.register.MainActivity">


        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.06"
            android:orientation="vertical"
            tools:context="za.co.mamoletu.register.MainActivity">


            <Button
                android:id="@+id/magic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:height="100dp"
                android:background="@drawable/red_button"
                android:text="@string/red_round_string"
                android:textSize="15sp"
                android:textColor="#ffffff" />


            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/magic_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_round_string"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:height="100dp"
                android:background="@drawable/green_button"/>
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/magic_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow_round_string"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:height="100dp"
                android:background="@drawable/yellow_button"/>


        </LinearLayout>

    </LinearLayout>


